--- a/Storm-regime-predictor.ipynb
+++ b/Storm-regime-predictor.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Storm Impact Regime Calculator\n",
+    "#### Requirements:\n",
+    "1. csv containing wave climates with:\n",
+    "    - Significant wave height\n",
+    "    - Wave period\n",
+    "    - Dune crest height\n",
+    "    - Dune toe height\n",
+    "    - nearshore height change\n",
+    "    - nearshore width change\n",
+    "2. Known tide and surge values at time of storm\n",
+    "="
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +31,16 @@
     "import math\n",
     "\n",
     "#  constants\n",
-    "g = 9.81 # m/s^2"
+    "g = 9.81 # m/s^2\n",
+    "\n",
+    "# Tide and surge variables (metres)\n",
+    "tide = 0.0\n",
+    "surge = 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +137,7 @@
        "4    WR2_2  0.500        2.524  0.51  0.42      0.12        50"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +169,475 @@
     "    # 5. calculate n50\n",
     "    data['n50'] = data['wave_setup']\n",
     "    # 6. calculate n98\n",
-    "    data['n98'] = data['n50'] + data['swash']\n",
+    "    data['n98'] = data['n50'] + data['swash'] + tide + surge\n",
     "data.loc[data['n98'] < data['Zt'], 'regime'] = 'less than Zt, swash'\n",
     "data.loc[data['n98'] > data['Zt'], 'regime'] = 'greater than Zt, collision'\n",
     "data.loc[data['n98'] > data['Zc'], 'regime'] = 'greater than Zc, overwash'\n",
     "data.loc[data['n50'] > data['Zc'], 'regime'] = 'greater than Zc, inundation'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Scenario</th>\n",
+       "      <th>Hs</th>\n",
+       "      <th>Wave_period</th>\n",
+       "      <th>Zc</th>\n",
+       "      <th>Zt</th>\n",
+       "      <th>h_change</th>\n",
+       "      <th>d_change</th>\n",
+       "      <th>L0</th>\n",
+       "      <th>beta_m</th>\n",
+       "      <th>wave_setup</th>\n",
+       "      <th>swash</th>\n",
+       "      <th>n50</th>\n",
+       "      <th>n98</th>\n",
+       "      <th>regime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>WR1_2</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>2.524</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>9.946444</td>\n",
+       "      <td>0.007200</td>\n",
+       "      <td>0.005620</td>\n",
+       "      <td>0.158149</td>\n",
+       "      <td>0.005620</td>\n",
+       "      <td>0.663769</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WR1_3</td>\n",
+       "      <td>0.587</td>\n",
+       "      <td>2.638</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>10.865225</td>\n",
+       "      <td>0.007200</td>\n",
+       "      <td>0.006364</td>\n",
+       "      <td>0.179097</td>\n",
+       "      <td>0.006364</td>\n",
+       "      <td>0.685461</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WR1_7</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>3.342</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>17.438215</td>\n",
+       "      <td>0.007200</td>\n",
+       "      <td>0.011162</td>\n",
+       "      <td>0.314106</td>\n",
+       "      <td>0.011162</td>\n",
+       "      <td>0.825268</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WR1_8</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>2.895</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>13.085378</td>\n",
+       "      <td>0.007200</td>\n",
+       "      <td>0.008066</td>\n",
+       "      <td>0.226998</td>\n",
+       "      <td>0.008066</td>\n",
+       "      <td>0.735065</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>WR2_2</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>2.524</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>50</td>\n",
+       "      <td>9.946444</td>\n",
+       "      <td>0.002400</td>\n",
+       "      <td>0.001873</td>\n",
+       "      <td>0.157741</td>\n",
+       "      <td>0.001873</td>\n",
+       "      <td>0.659614</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>WR2_3</td>\n",
+       "      <td>0.587</td>\n",
+       "      <td>2.638</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>50</td>\n",
+       "      <td>10.865225</td>\n",
+       "      <td>0.002400</td>\n",
+       "      <td>0.002121</td>\n",
+       "      <td>0.178634</td>\n",
+       "      <td>0.002121</td>\n",
+       "      <td>0.680755</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>WR_7</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>3.342</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>50</td>\n",
+       "      <td>17.438215</td>\n",
+       "      <td>0.002400</td>\n",
+       "      <td>0.003721</td>\n",
+       "      <td>0.313295</td>\n",
+       "      <td>0.003721</td>\n",
+       "      <td>0.817015</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>WR_8</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>2.895</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>50</td>\n",
+       "      <td>13.085378</td>\n",
+       "      <td>0.002400</td>\n",
+       "      <td>0.002689</td>\n",
+       "      <td>0.226412</td>\n",
+       "      <td>0.002689</td>\n",
+       "      <td>0.729101</td>\n",
+       "      <td>greater than Zc, overwash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>p3_2</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>2.524</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>9.946444</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.006460</td>\n",
+       "      <td>0.158297</td>\n",
+       "      <td>0.006460</td>\n",
+       "      <td>0.664756</td>\n",
+       "      <td>less than Zt, swash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>p3_3</td>\n",
+       "      <td>0.587</td>\n",
+       "      <td>2.638</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>10.865225</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.007315</td>\n",
+       "      <td>0.179263</td>\n",
+       "      <td>0.007315</td>\n",
+       "      <td>0.686578</td>\n",
+       "      <td>less than Zt, swash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>p3_7</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>3.342</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>17.438215</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.012829</td>\n",
+       "      <td>0.314399</td>\n",
+       "      <td>0.012829</td>\n",
+       "      <td>0.827228</td>\n",
+       "      <td>less than Zt, swash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>p3_8</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>2.895</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>13.085378</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.009272</td>\n",
+       "      <td>0.227210</td>\n",
+       "      <td>0.009272</td>\n",
+       "      <td>0.736482</td>\n",
+       "      <td>less than Zt, swash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>p6_2</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>2.524</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>9.946444</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.006460</td>\n",
+       "      <td>0.158297</td>\n",
+       "      <td>0.006460</td>\n",
+       "      <td>0.664756</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>p6_3</td>\n",
+       "      <td>0.587</td>\n",
+       "      <td>2.638</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>10.865225</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.007315</td>\n",
+       "      <td>0.179263</td>\n",
+       "      <td>0.007315</td>\n",
+       "      <td>0.686578</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>p6_7</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>3.342</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>17.438215</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.012829</td>\n",
+       "      <td>0.314399</td>\n",
+       "      <td>0.012829</td>\n",
+       "      <td>0.827228</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>p6_8</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>2.895</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>13.085378</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.009272</td>\n",
+       "      <td>0.227210</td>\n",
+       "      <td>0.009272</td>\n",
+       "      <td>0.736482</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>p10_2</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>2.524</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>9.946444</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.006460</td>\n",
+       "      <td>0.158297</td>\n",
+       "      <td>0.006460</td>\n",
+       "      <td>0.664756</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>p10_3</td>\n",
+       "      <td>0.587</td>\n",
+       "      <td>2.638</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>10.865225</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.007315</td>\n",
+       "      <td>0.179263</td>\n",
+       "      <td>0.007315</td>\n",
+       "      <td>0.686578</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>p10_7</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>3.342</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>17.438215</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.012829</td>\n",
+       "      <td>0.314399</td>\n",
+       "      <td>0.012829</td>\n",
+       "      <td>0.827228</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>p10_8</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>2.895</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>725</td>\n",
+       "      <td>13.085378</td>\n",
+       "      <td>0.008276</td>\n",
+       "      <td>0.009272</td>\n",
+       "      <td>0.227210</td>\n",
+       "      <td>0.009272</td>\n",
+       "      <td>0.736482</td>\n",
+       "      <td>greater than Zt, collision</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Scenario     Hs  Wave_period    Zc    Zt  h_change  d_change         L0  \\\n",
+       "0     WR1_2  0.500        2.524  0.44  0.38      0.18        25   9.946444   \n",
+       "1     WR1_3  0.587        2.638  0.44  0.38      0.18        25  10.865225   \n",
+       "2     WR1_7  1.125        3.342  0.44  0.38      0.18        25  17.438215   \n",
+       "3     WR1_8  0.783        2.895  0.44  0.38      0.18        25  13.085378   \n",
+       "4     WR2_2  0.500        2.524  0.51  0.42      0.12        50   9.946444   \n",
+       "5     WR2_3  0.587        2.638  0.51  0.42      0.12        50  10.865225   \n",
+       "6      WR_7  1.125        3.342  0.51  0.42      0.12        50  17.438215   \n",
+       "7      WR_8  0.783        2.895  0.51  0.42      0.12        50  13.085378   \n",
+       "8      p3_2  0.500        2.524  3.50  1.00      6.00       725   9.946444   \n",
+       "9      p3_3  0.587        2.638  3.50  1.00      6.00       725  10.865225   \n",
+       "10     p3_7  1.125        3.342  3.50  1.00      6.00       725  17.438215   \n",
+       "11     p3_8  0.783        2.895  3.50  1.00      6.00       725  13.085378   \n",
+       "12     p6_2  0.500        2.524  3.50  0.50      6.00       725   9.946444   \n",
+       "13     p6_3  0.587        2.638  3.50  0.50      6.00       725  10.865225   \n",
+       "14     p6_7  1.125        3.342  3.50  0.50      6.00       725  17.438215   \n",
+       "15     p6_8  0.783        2.895  3.50  0.50      6.00       725  13.085378   \n",
+       "16    p10_2  0.500        2.524  3.20  0.60      6.00       725   9.946444   \n",
+       "17    p10_3  0.587        2.638  3.20  0.60      6.00       725  10.865225   \n",
+       "18    p10_7  1.125        3.342  3.20  0.60      6.00       725  17.438215   \n",
+       "19    p10_8  0.783        2.895  3.20  0.60      6.00       725  13.085378   \n",
+       "\n",
+       "      beta_m  wave_setup     swash       n50       n98  \\\n",
+       "0   0.007200    0.005620  0.158149  0.005620  0.663769   \n",
+       "1   0.007200    0.006364  0.179097  0.006364  0.685461   \n",
+       "2   0.007200    0.011162  0.314106  0.011162  0.825268   \n",
+       "3   0.007200    0.008066  0.226998  0.008066  0.735065   \n",
+       "4   0.002400    0.001873  0.157741  0.001873  0.659614   \n",
+       "5   0.002400    0.002121  0.178634  0.002121  0.680755   \n",
+       "6   0.002400    0.003721  0.313295  0.003721  0.817015   \n",
+       "7   0.002400    0.002689  0.226412  0.002689  0.729101   \n",
+       "8   0.008276    0.006460  0.158297  0.006460  0.664756   \n",
+       "9   0.008276    0.007315  0.179263  0.007315  0.686578   \n",
+       "10  0.008276    0.012829  0.314399  0.012829  0.827228   \n",
+       "11  0.008276    0.009272  0.227210  0.009272  0.736482   \n",
+       "12  0.008276    0.006460  0.158297  0.006460  0.664756   \n",
+       "13  0.008276    0.007315  0.179263  0.007315  0.686578   \n",
+       "14  0.008276    0.012829  0.314399  0.012829  0.827228   \n",
+       "15  0.008276    0.009272  0.227210  0.009272  0.736482   \n",
+       "16  0.008276    0.006460  0.158297  0.006460  0.664756   \n",
+       "17  0.008276    0.007315  0.179263  0.007315  0.686578   \n",
+       "18  0.008276    0.012829  0.314399  0.012829  0.827228   \n",
+       "19  0.008276    0.009272  0.227210  0.009272  0.736482   \n",
+       "\n",
+       "                        regime  \n",
+       "0    greater than Zc, overwash  \n",
+       "1    greater than Zc, overwash  \n",
+       "2    greater than Zc, overwash  \n",
+       "3    greater than Zc, overwash  \n",
+       "4    greater than Zc, overwash  \n",
+       "5    greater than Zc, overwash  \n",
+       "6    greater than Zc, overwash  \n",
+       "7    greater than Zc, overwash  \n",
+       "8          less than Zt, swash  \n",
+       "9          less than Zt, swash  \n",
+       "10         less than Zt, swash  \n",
+       "11         less than Zt, swash  \n",
+       "12  greater than Zt, collision  \n",
+       "13  greater than Zt, collision  \n",
+       "14  greater than Zt, collision  \n",
+       "15  greater than Zt, collision  \n",
+       "16  greater than Zt, collision  \n",
+       "17  greater than Zt, collision  \n",
+       "18  greater than Zt, collision  \n",
+       "19  greater than Zt, collision  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
